--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.46",
-		"@sveltejs/kit": "^1.0.0-next.284",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.44",
+		"@sveltejs/kit": "^1.0.0-next.285",
 		"@tailwindcss/typography": "^0.5.0",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
